# My-Blender-Tools

./: README.md  __init__.py  name_syncher.py  pyproject.toml
src/my_addon/: __init__.py
src/my_addon/blender/: __init__.py
src/my_addon/blender/operators/: name_synch_operator.py
src/my_addon/blender/panels/: my_panel.py
src/my_addon/core/name_synch/: name_synch_usecase.py
src/name_synch/: __init__.py
src/name_synch/helpers/: constants.py
src/name_synch/operators/: name_syncher.py
tests/my_addon/core/name_synch/: test_name_synch_usecase.py
